--- a/PokemonBDSPEditor.csproj
+++ b/PokemonBDSPEditor.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Data\BundleManipulator.cs" />
     <Compile Include="Data\JSONObjects\Bundle\BundleInfo.cs" />
     <Compile Include="Data\Utils\FileConstants.cs" />
+    <Compile Include="Data\Utils\RegexPatterns.cs" />
     <Compile Include="Engine\ScriptEditor\EditorEngine.cs" />
     <Compile Include="Engine\ScriptEditor\Model\Argument.cs" />
     <Compile Include="Data\JSONObjects\Scripts\ArgumentInfo.cs" />
@@ -127,6 +128,8 @@
   <ItemGroup>
     <None Include="Icons\418.ico" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Engine\ScriptEditor\Exception\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
