--- a/PokemonBDSPEditor.csproj
+++ b/PokemonBDSPEditor.csproj
@@ -68,9 +68,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\BundleData.cs" />
+    <Compile Include="Data\Bundles\Bundle.cs" />
     <Compile Include="Data\BundleDecompressor.cs" />
     <Compile Include="Data\BundleManipulator.cs" />
+    <Compile Include="Data\Bundles\ScriptBundle.cs" />
     <Compile Include="Data\JSONObjects\Bundle\BundleInfo.cs" />
     <Compile Include="Data\Utils\FileConstants.cs" />
     <Compile Include="Data\Utils\RegexPatterns.cs" />
