--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AssetsTools.NET" version="2.0.9" targetFramework="net48" />
+  <package id="EasyScintilla" version="1.0.5" targetFramework="net48" />
+  <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net48" />
   <package id="Microsoft-WindowsAPICodePack-Core" version="1.1.4" targetFramework="net48" />
   <package id="Microsoft-WindowsAPICodePack-Shell" version="1.1.4" targetFramework="net48" />
   <package id="Mono.Cecil" version="0.10.4" targetFramework="net48" />
