Filled tabs for all refs

--- a/BrilliantShiningScriptEditor.csproj
+++ b/BrilliantShiningScriptEditor.csproj
@@ -231,7 +231,19 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="JSON\**">
+    <Content Include="JSON\bundle_constants.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="JSON\commands.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="JSON\flags.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="JSON\sys_flags.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="JSON\work.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
